@startuml

skinparam classBackgroundColor white

interface ICamera {
    +start(): void
    +stop(): void
    +get_frame(): Frame
    +turn_on_flash(): void
    +turn_off_flash(): void
}

dataclass Frame <<(D, lightblue)>> {
    + data: ndarray
}

class CameraCapture {
    - _stream_url: str
    - _flash_url: str
    - _frame: Frame
    - _cap: cv2.VideoCapture
    + CameraCapture(stream_url: str, flash_url: str)
    - _update_frame(data: ndarray): void
    - _open_stream(): bool
    - _capture(): void
}

class CameraSimulator {
    - _frame: Frame
    - _frame_time: float
    - _cap: cv2.VideoCapture
    + CameraSimulator()
    - _generate_new_frame(): Frame
}

ICamera <|.. CameraSimulator
ICamera <|.. CameraCapture
CameraCapture --> Frame
CameraSimulator --> Frame

@enduml
